Make inputs changeable and use correct API to prevent value jumping when releasing slider.
closes #16523


git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@14128 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/assets/css/wdkCommon.css
+++ b/View/assets/css/wdkCommon.css
@@ -1086,6 +1086,7 @@ tr.headerRow th {
   padding: 0px 2px 0px 2px;
 }
 #word-cloud #layout .word { padding: 2px; }
+#word-cloud .word-cloud-error { padding: .4em; }
 
 
 
